[project]
name = "product-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exa-py>=2.0.1",
    "fastapi>=0.123.2",
    "ipython>=9.7.0",
    "langchain-groq>=1.0.1",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "pandas>=2.1.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "streamlit>=1.38.0",
    "uvicorn>=0.38.0",
]
